docs/0.11/_sources/api/gammapy.maps.MapGeom.rst.txt
MapGeom
=======

.. currentmodule:: gammapy.maps

.. autoclass:: MapGeom
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapGeom.center_coord
      ~MapGeom.center_pix
      ~MapGeom.center_skydir
      ~MapGeom.data_shape
      ~MapGeom.is_allsky
      ~MapGeom.is_image

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapGeom.contains
      ~MapGeom.contains_pix
      ~MapGeom.coord_to_idx
      ~MapGeom.coord_to_pix
      ~MapGeom.coord_to_tuple
      ~MapGeom.copy
      ~MapGeom.crop
      ~MapGeom.downsample
      ~MapGeom.energy_mask
      ~MapGeom.from_hdulist
      ~MapGeom.get_axis_by_name
      ~MapGeom.get_axis_index_by_name
      ~MapGeom.get_coord
      ~MapGeom.get_idx
      ~MapGeom.make_bands_hdu
      ~MapGeom.pad
      ~MapGeom.pix_to_coord
      ~MapGeom.pix_to_idx
      ~MapGeom.slice_by_idx
      ~MapGeom.solid_angle
      ~MapGeom.to_cube
      ~MapGeom.to_image
      ~MapGeom.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: center_coord
   .. autoattribute:: center_pix
   .. autoattribute:: center_skydir
   .. autoattribute:: data_shape
   .. autoattribute:: is_allsky
   .. autoattribute:: is_image

   .. rubric:: Methods Documentation

   .. automethod:: contains
   .. automethod:: contains_pix
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: coord_to_tuple
   .. automethod:: copy
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: energy_mask
   .. automethod:: from_hdulist
   .. automethod:: get_axis_by_name
   .. automethod:: get_axis_index_by_name
   .. automethod:: get_coord
   .. automethod:: get_idx
   .. automethod:: make_bands_hdu
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: slice_by_idx
   .. automethod:: solid_angle
   .. automethod:: to_cube
   .. automethod:: to_image
   .. automethod:: upsample
